--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,20 +97,50 @@ header nav ul li a:hover {
 
 .hero button {
     padding: 12px 25px;
-    background-color:#3FA796;
+    background: linear-gradient(45deg, #3FA796, #0056b2, #67D5B5);
+    background-size: 200% 200%;
     color: #fff;
     border: none;
     cursor: pointer;
-    font-size: 18px;
+    font-size: 26px;
     border-radius: 5px;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.3s ease;
     position: relative;
     z-index: 1;
+    animation: gradientMove 4s ease infinite, pulse 2s infinite ease-in-out;
+}
+
+/* Animação para mover o degradê */
+@keyframes gradientMove {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+/* Efeito de aumento e diminuição mais forte */
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1); /* Aumenta mais no meio do ciclo */
+    }
+    100% {
+        transform: scale(1);
+    }
 }
 
 .hero button:hover {
-    background-color: #0056b2;
+    background-color: transparent; /* Remove a cor sólida no hover */
+    transform: scale(1.15); /* Expande um pouco mais no hover */
 }
+
 
 /* Serviços */
 #servicos {
@@ -463,3 +493,91 @@ footer hr {
     background-color: red;
     margin-top: 10px;
 }
+
+.hero-section {
+    height: 130vh;
+    background: linear-gradient(to right, #1c3f94, #4e2ab2);
+    color: white;
+  }
+  
+  h1 {
+    margin-bottom: 20px;
+  }
+  
+  .btn-outline-light {
+    border: 2px solid #fff;
+    color: #fff;
+    font-weight: bold;
+  }
+  
+  .btn-outline-light:hover {
+    background-color: #fff;
+    color: #4e2ab2;
+    border-color: #fff;
+  }
+
+  .chat-popup {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 300px;
+    background-color: #f1f1f1;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    z-index: 1050;
+    font-family: Arial, sans-serif;
+  }
+  
+  .chat-header {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    background-color: #25D366;
+    border-radius: 10px 10px 0 0;
+    color: white;
+  }
+  
+  .chat-img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
+  
+  .chat-info h5 {
+    margin: 0;
+    font-size: 16px;
+  }
+  
+  .chat-body {
+    padding: 10px;
+    max-height: 150px;
+    overflow-y: auto;
+    background-color: #fff;
+  }
+  
+  .message {
+    margin-bottom: 10px;
+    padding: 8px;
+    border-radius: 5px;
+  }
+  
+  .received {
+    background-color: #DCF8C6;
+  }
+  
+  .chat-footer {
+    display: flex;
+    padding: 10px;
+    border-top: 1px solid #ddd;
+    background-color: #f9f9f9;
+  }
+  
+  .chat-footer input {
+    flex-grow: 1;
+    margin-right: 10px;
+  }
+  
+  .chat-footer button {
+    flex-shrink: 0;
+  }
