--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,7 +508,7 @@ footer hr {
 }
 
 .hero-section {
-    height: 80vh;
+    height: 850px;
     background: linear-gradient(to right, #1c3f94, #4e2ab2);
     color: white;
 }
