--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,12 +62,26 @@ header nav ul li a:hover {
 
 /* Hero Section */
 .hero {
-    background: #2A0944;
+    background: linear-gradient(45deg, #2A0944, #4e2ab2, #2A0944, #4e2ab2);
+    background-size: 400% 400%;
     color: #fff;
     padding: 160px 20px;
     text-align: center;
     position: relative;
     height: 450px;
+    animation: gradientAnimation 15s ease infinite;
+}
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 @media (max-width: 599px) {
@@ -515,8 +529,22 @@ footer hr {
 
 .hero-section {
     height: 850px;
-    background: linear-gradient(to right, #1c3f94, #4e2ab2);
+    background: linear-gradient(45deg, #2A0944, #4e2ab2, #2A0944, #4e2ab2);
+    background-size: 400% 400%;
+    animation: gradientAnimation 15s ease infinite;
     color: white;
+}
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 h1 {
@@ -772,13 +800,61 @@ h1 {
     text-decoration: none;
 }
 .btn-custom {
-    background-color: #4CAF50;
-    color: white;
+    background-color: #3FA796;
+    color: #FFFFFF;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
 }
 .btn-custom:hover {
-    background-color: #45a049;
+    background-color: #2A0944;
+    color: #FEC260;
+}
+
+.cont {
+    background: linear-gradient(45deg, #2A0944, #4e2ab2, #2A0944, #4e2ab2);
+    background-size: 400% 400%;
+    color: #2A0944;
+    animation: gradientAnimation 15s ease infinite;
+}
+
+.form-popup h2 {
+    color: #FEC260;
+}
+
+.form-popup button {
+    background: linear-gradient(45deg, #a8e063, #56ab2f, #a8e063);
+    background-size: 200% 200%;
+    animation: gradientAnimation 3s ease infinite;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+@keyframes gradientAnimation {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.whatsapp-icon {
+    position: fixed;
+    bottom: 20px;
+    left: 20px;
+    cursor: pointer;
+}
+
+.whatsapp-icon i {
+    color: #25D366;
 }
